crates/toml/tests/snapshots/invalid/ext/string/no-close-recovery-02.stderr
TOML parse error at line 2, column 2
  |
2 | '
  |  ^
key with no value, expected `=`

---
TOML parse error at line 1, column 6
  |
1 | a = '
  |      ^
invalid literal string, expected `'`

---
TOML parse error at line 2, column 2
  |
2 | '
  |  ^
invalid literal string, expected `'`
